@@ -158,6 +158,12 @@
 		<property key="timeout" value="2000"/>
 		<property key="retry" value="3"/>
 	</protocol-plugin>
+        <protocol-plugin protocol="Dell-OpenManage" class-name="org.opennms.netmgt.capsd.TcpPlugin" scan="on" user-defined="false">
+                <property key="banner" value="*"/>
+                <property key="port" value="1311"/>
+                <property key="timeout" value="3000"/>
+                <property key="retry" value="3"/>
+        </protocol-plugin>
 
 	<smb-config>
 		<smb-auth user="guest" password="guest" type="domain">WORKGROUP</smb-auth>
