@@ -1,5 +1,7 @@
 1.1.4 to 1.1.5
 ----------------------------------------------------------------------
+- Added a test for the Dell OpenManage service, and if available,
+  an OpenManage link will appear on the webUI node page.
 - Removed the cisco.pixcpu report as a duplicate of avgBsy5. Thx Alex
   Bug 925.
 - Made the Netware mask more generic. Thx Wes. Bug 880
